--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,12 +7,12 @@
 }
 
 .bgWhite{
-    background-color: #F5F2F2;
+    background-color: #e6e6e6;
 }
 
 /* header */
 header{
-    padding: 1rem;
+    padding: 0.5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -26,7 +26,7 @@ header nav ul{
     display: flex;
     list-style: none;
     font-family: 'Oswald', sans-serif;
-    font-size: 2rem;
+    font-size: 1.3rem;
 }
 
 header nav ul li a{
@@ -182,7 +182,6 @@ footer p{
     padding: 12rem;
 }
 
-
 /* Animation couleur bouton */
 
 @keyframes change {
@@ -190,4 +189,42 @@ footer p{
     33%{ background-color: black;}
     66%{ background-color: yellow;}
     100%{ background-color: #FF0036;}
+}
+
+/* ACCOUNT */
+#account{
+    padding: 5rem;
+}
+
+.account{
+    width: 70%;
+    margin: auto;
+    display: flex;
+    background-color: white;
+    box-shadow: 0px 0px 10px 3px rgb(0 0 0 / 27%);
+}
+
+.infosMembre{
+    flex: 1;
+    border-right: 1px solid black;
+    padding-top: 3rem;
+}
+
+.infosMembre img{
+    width: 100%;
+    box-shadow: 5px 5px 6px 2px rgba(0,0,0,0.8);}
+
+.contenuMembre{
+    text-align: center;
+    flex: 3;
+}
+
+/* ADMIN */
+
+.categorieArticle table{
+    border: 1px solid black;
+}
+
+.categorieArticle table tbody tr td{
+    padding: 0.5rem;
 }
