--- a/src/css/style.css
+++ b/src/css/style.css
@@ -220,11 +220,59 @@ footer p{
 }
 
 /* ADMIN */
-
-.categorieArticle table{
-    border: 1px solid black;
+.gestionAdmin .template{
+    width: 80%;
+    display: flex;
+    margin: auto;
+    background-color: white;
+    box-shadow: 0px 0px 10px 3px rgb(0 0 0 / 27%);
 }
 
-.categorieArticle table tbody tr td{
+/* MENU ADMIN */
+
+.gestionAdmin .template .menu{
+    display: flex;
+    flex-direction: column;
+}
+.gestionAdmin .template .menu a{
+    text-decoration: none;
+    padding: 1rem;
+    border: 1px solid black;
+    background-color: #FF0036;
+    color: white;
+    text-align: center;
+    margin-bottom: 1rem;
+    box-shadow: 5px 5px 6px 2px rgba(0,0,0,0.8);
+}
+
+.gestionAdmin .template .menu a:hover{
+    animation: change 3s infinite;
+    color: white; 
+    -webkit-text-stroke: 1px black;
+}
+
+/* ADMIN GESTION CATEGORIE */
+.adminContenu{
+    width: 100%;
+    text-align: center;
+}
+.gestionAdmin .adminContenu table{
+    border: 1px solid black;
+    width: 100%;
+}
+
+.gestionAdmin .adminContenu table tbody tr td{
     padding: 0.5rem;
+}
+
+.gestionCategorie{
+    width: 80%;
+    margin: auto;
+    /* display: flex;
+    flex-wrap: wrap; */
+    justify-content: space-between;
+}
+
+.gestionCategorie div{
+    width: 100%;
 }
