--- a/src/css/style.css
+++ b/src/css/style.css
@@ -69,7 +69,6 @@ header nav ul li a:hover{
 }
 
 .v1{
-    background: url(../../src/img/article/The-Last-of-Us-Part.jpg) center center/cover;
     height: 50vh;
     flex: 1;
 }
@@ -81,11 +80,14 @@ header nav ul li a:hover{
 }
 
 .v2{
-    background: url(../../src/img/article/returnal.jpg) center center/cover;
     height: 25vh;
 }
 
 .v3{
+    height: 25vh;
+}
+/* Temporaire à effacer */
+.v4{
     background: url(../../src/img/article/animal-crossing.jpg) center center/cover;
     height: 25vh;
 }
@@ -259,12 +261,14 @@ input[type=file]::-webkit-file-upload-button {
 }
 .gestionAdmin .adminContenu table{
     border: 1px solid black;
-    width: 100%;
+    width: 90%;
     margin: 1rem;
+
 }
 
 .gestionAdmin .adminContenu table tbody tr td{
     padding: 0.5rem;
+    font-size: 0.9rem;
 }
 
 .gestionCategorie{
