--- a/src/css/generique.css
+++ b/src/css/generique.css
@@ -15,6 +15,10 @@ h1, h2, h3, h4, h5, h6{
     text-transform: uppercase;
 }
 
+a{
+    text-decoration: none;
+}
+
 /* COULEUR TEXTE */
 .tc-r a{
     color: #FF0036;
