--- a/src/css/article.css
+++ b/src/css/article.css
@@ -54,51 +54,6 @@
     box-shadow: 0px 0px 10px 3px rgb(0 0 0 / 27%)
 }
 
-/* FORMULAIRE COMMENTAIRE */
-
-.commentaires{
-    width: 100%;
-    background-color: white;
-    padding: 2rem 2rem;
-    border-top: 1px solid black;
-}
-
-.commentaires form{
-    width: 80%;
-    margin: auto;
-}
-
-.commentaires table{
-    width: 100%;
-}
-
-.commentaires table tbody tr td{
-    width: 100%;
-}
-
-.commentaires table tbody tr td input,
-.commentaires table tbody tr td textarea
-{
-    width: 100%;
-    padding: 1rem;
-    margin-bottom: 0.5rem;
-}
-
-input[type=submit]{
-    background: #FF0036;
-    box-shadow: 0px 10px 13px -7px #000000, 1px 2px 3px 3px rgba(0,0,0,0);
-    border: 1px solid yellow;
-    cursor: pointer;
-    font-size: 1.3rem;
-    font-weight: bold;
-    color: white;
-}
-
-input[type=submit]:hover{
-    animation: change 3s infinite;
-    color: white; 
-    -webkit-text-stroke: 1px black;
-}
 
 /* Liste des article */
 .listArticle div{
@@ -128,4 +83,122 @@ input[type=submit]:hover{
 
 footer{
     margin-top: 5rem;
+}
+
+p img{
+    width: 90%;
+    height: auto;
+}
+
+p iframe{
+    width: 68%;
+    display: block;
+    margin: 1.5rem auto;
+    box-shadow: 0px 10px 13px -7px #000000, 1px 2px 3px 3px rgba(0,0,0,0);
+
+}
+/* Mise en forme image user pour commentaire */
+td img{
+    width: 5rem;
+    border: 3px solid black;
+    margin-right: 1rem;
+}
+
+/* FORMULAIRE COMMENTAIRE */
+
+.commentaires{
+    width: 100%;
+    background-color: white;
+    padding: 2rem 2rem;
+    border-top: 1px solid black;
+}
+
+.commentaires form{
+    width: 80%;
+    margin: auto;
+}
+
+.commentaires table{
+    width: 100%;
+}
+
+.commentaires table tbody tr td{
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.commentaires table tbody tr td input,
+.commentaires table tbody tr td textarea
+{
+    width: 100%;
+    padding: 1rem;
+    margin-bottom: 0.5rem;
+}
+
+input[type=submit]{
+    background: #FF0036;
+    box-shadow: 0px 10px 13px -7px #000000, 1px 2px 3px 3px rgba(0,0,0,0);
+    border: 1px solid yellow;
+    cursor: pointer;
+    font-size: 1.3rem;
+    font-weight: bold;
+    color: white;
+}
+
+input[type=submit]:hover{
+    animation: change 3s infinite;
+    color: white; 
+    -webkit-text-stroke: 1px black;
+}
+
+.listCommentaire{
+    background-color: white;
+    width: 100%;
+    margin-top: -1rem;
+    margin-bottom: -5rem;
+    padding-bottom: 3rem;
+}
+
+.commentaireContainer{
+    width: 80%;
+    margin: 1rem auto;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+    border: 1px solid black;
+    box-shadow: 0px 10px 13px -7px #000000, 1px 2px 3px 3px rgba(0,0,0,0);
+}
+
+
+.infosUser{
+    padding: 0.5rem;
+    background-color: yellow;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.infosUser img{
+    max-width: 4.5rem;
+    border: 3px solid black;
+    margin-right: 1rem;
+}
+
+.contenuCommentaire{
+    background-color: gray;
+    padding: 1rem;
+}
+
+.repondre{
+    padding: 0.5rem;
+    background-color: #FF0036;
+    text-align: center;
+    margin: auto;
+    width: 100%;
+    background-color: black;
+    font-weight: bold;
+}
+
+.commentaireContainer a{
+    color: white;
 }
