--- a/src/css/style.css
+++ b/src/css/style.css
@@ -86,11 +86,6 @@ header nav ul li a:hover{
 .v3{
     height: 25vh;
 }
-/* Temporaire à effacer */
-.v4{
-    background: url(../../src/img/article/animal-crossing.jpg) center center/cover;
-    height: 25vh;
-}
 
 .newsCategorie{
     background-color: #F5F2F2;
@@ -100,19 +95,94 @@ header nav ul li a:hover{
     width: 8rem;
     text-align: center;
 }
-
+/* PARTIE 9 */
 /* MORE NEWS */
+#moreNews{
+    width: 80%;
+    margin: 5rem auto;
+    display: flex;
+    flex: 5;
+}
+
+#moreNews div{
+    flex: 5;
+    margin: 1rem 0;
+}
+
+#moreNews a{
+    color: white;
+    -webkit-text-stroke: 1px #FF0036;
+}
+
 .moreNews{
     display: flex;
-    flex-wrap: wrap;
-    width: 80%;
-    margin: auto;
+    align-items: center;
+    margin: 2rem 1.5rem 2rem 0!important;
+    padding-bottom: 2rem;
+    border-bottom: #303030 solid 1px;
 }
 
-.moreNews-row-item {
-    flex: 1 1 30%; /*grow | shrink | basis */
-    padding: 1rem;
+.moreNews img{
+    flex: 2;
+    width: 30%;
 }
+
+.moreNews div{
+    flex: 5;
+    padding-left: 2rem;
+}
+
+.moreNews h2{
+    font-size: 1rem;
+}
+
+.moreNews p{
+    color: #303030;
+    -webkit-text-stroke: 1px #303030;
+
+}
+
+
+
+
+.listArticle{
+    flex: 2!important;
+    background-color: #FF0036;
+    border-radius: 3px;
+    box-shadow: 0px 0px 10px 3px rgb(0 0 0 / 27%);
+    height: 100%;
+    padding-bottom: 2rem;
+    margin-left: 1rem;
+}
+
+.listArticle div{
+    display: flex;
+    padding:  0.3rem;
+    margin: 0.5rem;
+    border: 1px solid yellow;
+    background-color: black;
+    color: yellow;
+    box-shadow: 0px 10px 13px -7px #000000, 1px 2px 3px 3px rgba(0,0,0,0);
+
+}
+
+.listArticle a div img{
+    width: 5rem;
+}
+.listArticle div h2{
+    padding: 0.5rem;
+    text-align: center;
+    font-size: 1rem;
+}
+
+.listArticle div h2 a{
+    text-decoration: none;
+    color: yellow;
+
+}
+
+/* Liste des article */
+
 
 /* FOOTER */
 footer{
